Project 02 - Deployment (wip)

--- a/project-02/NeighborlyAPI/requirements.txt
+++ b/project-02/NeighborlyAPI/requirements.txt
@@ -1,2 +1,6 @@
-azure-functions==1.2.1
+# DO NOT include azure-functions-worker in this file
+# The Python Worker is managed by Azure Functions platform
+# Manually managing azure-functions-worker may cause unexpected issues
+
+azure-functions
 pymongo==3.10.1
