--- a/project-02/NeighborlyAPI/Pipfile
+++ b/project-02/NeighborlyAPI/Pipfile
@@ -12,10 +12,10 @@ requests = "*"
 flask-bootstrap = "*"
 flask-restplus = "*"
 flask-swagger-ui = "*"
-werkzeug = "===0.16.1"
+werkzeug = "===2.0.1"
 azure-functions = "*"
 azure-cosmos = "*"
-pymongo = "*"
+pymongo = "===3.12.0"
 azure-cli-core = "*"
 feedgen = "*"
 
