--- a/project-02/NeighborlyFrontEnd/requirements.txt
+++ b/project-02/NeighborlyFrontEnd/requirements.txt
@@ -1,15 +1,16 @@
-azure-functions==1.2.1
-certifi==2020.4.5.1
-chardet==3.0.4
-click==7.1.2
-dominate==2.5.1
-Flask==1.1.2
+azure-functions==1.7.0
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
+dominate==2.6.0
+flask==2.0.1
 Flask-Bootstrap==3.3.7.1
-idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-requests==2.23.0
-urllib3==1.25.9
+idna==2.10
+itsdangerous==2.0.1
+jinja2==3.0.1
+markupsafe==2.0.1
+requests==2.25.1
+six==1.16.0
+urllib3==1.26.5
 visitor==0.1.3
-Werkzeug==1.0.1
+werkzeug==2.0.1
