refactored to use the app insight instrumentation key

--- a/project-04/azure-vote/config_file.cfg
+++ b/project-04/azure-vote/config_file.cfg
@@ -3,3 +3,4 @@ TITLE = 'Azure Voting App'
 VOTE1VALUE = 'Cats'
 VOTE2VALUE = 'Dogs'
 SHOWHOST = 'false'
+APP_INSIGHTS_INSTRUMENTATION_KEY = 'InstrumentationKey=7556032e-9081-42ab-95dc-f8710c158adb;IngestionEndpoint=https://southcentralus-3.in.applicationinsights.azure.com/'
