--- a/project-04/azure-vote/config_file.cfg
+++ b/project-04/azure-vote/config_file.cfg
@@ -3,4 +3,4 @@ TITLE = 'Azure Voting App'
 VOTE1VALUE = 'Cats'
 VOTE2VALUE = 'Dogs'
 SHOWHOST = 'false'
-APP_INSIGHTS_INSTRUMENTATION_KEY = 'InstrumentationKey=5c9f16b0-8a50-42a2-a2b2-e28a07d05079;IngestionEndpoint=https://southcentralus-3.in.applicationinsights.azure.com/'
+APP_INSIGHTS_INSTRUMENTATION_KEY = 'InstrumentationKey=5c9f16b0-8a50-42a2-a2b2-e28a07d05079'
